Bug 474500 - Open archives as folder option is not saved on 24.02.0
Summary: Open archives as folder option is not saved on 24.02.0
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
: 483232 483342 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-13 19:20 UTC by Enrico
Modified: 2024-03-16 21:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.1
Sentry Crash Report:


Attachments
The option in the Dolphin settings (51.02 KB, image/png)
2023-09-13 19:20 UTC, Enrico
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Enrico 2023-09-13 19:20:04 UTC
Created attachment 161608 [details]
The option in the Dolphin settings

SUMMARY
***
Hello,
in the last Neon Unstable is not possible to activate the "Open archives as folder" setting in Dolphin 23.11.70.

It works on Plasma 5.27, this only occurs in Plasma 6
***


STEPS TO REPRODUCE
1. Open Dolphin
2. Open Dolphin settings (CTRL+Maiusc+,)
3. In the View section, flag "Open archives as folder"
4. Apply and press OK
5. Re-open the settings (CTRL+Maiusc+,)

OBSERVED RESULT
The option is not saved

EXPECTED RESULT
The option should be saved

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-32-generic (64-bit)
Graphics Platform: X11
Comment 1 Enrico 2023-11-24 21:12:04 UTC
I confirm this behviour in KaOS as well

Operating System: KaOS (2023) 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.5.11-1 (64-bit)
Graphics Platform: Wayland
Comment 2 Nicolas Fella 2024-03-11 18:42:41 UTC
*** Bug 483232 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas Fella 2024-03-12 15:28:44 UTC
*** Bug 483342 has been marked as a duplicate of this bug. ***
Comment 4 U de Recife 2024-03-12 20:21:27 UTC
You can enable it though. You just have to quit Dolphin, then edit ~/.config/dolphinrc, and add to [General] the following:
BrowseThroughArchives=true.

Next time Dolphin will Browse through archives as if they were folders.
Comment 5 Justin Zobel 2024-03-13 01:19:44 UTC
Updated version as still occurs in 24.02.0
Comment 6 Bug Janitor Service 2024-03-16 14:23:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/736
Comment 7 Nicolas Fella 2024-03-16 20:59:54 UTC
Git commit d7c17990575a77c406eec2c21f8f57268381d33b by Nicolas Fella.
Committed on 16/03/2024 at 14:23.
Pushed by nicolasfella into branch 'master'.

Save 'Open Archives as Folders' setting

This got lost in 489b56b68bb29e81337e115c490eea4403001b71

M  +1    -0    src/settings/viewmodes/generalviewsettingspage.cpp

https://invent.kde.org/system/dolphin/-/commit/d7c17990575a77c406eec2c21f8f57268381d33b
Comment 8 Nicolas Fella 2024-03-16 21:00:36 UTC
Git commit 8e457654f2bc2bb35a4dc1b4b4b355ba80277065 by Nicolas Fella.
Committed on 16/03/2024 at 21:00.
Pushed by nicolasfella into branch 'release/24.02'.

Save 'Open Archives as Folders' setting

This got lost in 489b56b68bb29e81337e115c490eea4403001b71
(cherry picked from commit d7c17990575a77c406eec2c21f8f57268381d33b)

M  +1    -0    src/settings/viewmodes/generalviewsettingspage.cpp

https://invent.kde.org/system/dolphin/-/commit/8e457654f2bc2bb35a4dc1b4b4b355ba80277065