Save 'Open Archives as Folders' setting

This got lost in 489b56b68bb29e81337e115c490eea4403001b71

BUG: 474500
(cherry picked from commit d7c17990575a77c406eec2c21f8f57268381d33b)